<resources>
    <string name="app_name">MyGift</string>

    <!--首页控件-->
    <string name="home_rb_text_guide">指南</string>
    <string name="home_rb_text_hot">热门</string>
    <string name="home_rb_text_sort">分类</string>
    <string name="home_rb_text_my">我的</string>
    <string name="home_btn_text_gongnue">攻略</string>
    <string name="home_btn_text_gift">礼物</string>

    <!--分类-->
    <string name="sort_gongLue_title_zhuanTi">专题</string>
    <string name="sort_gongLue_title_seeAll">查看全部</string>
    <string name="sort_gongLue_title_pinLei">品类</string>
    <string name="sort_gongLue_title_style">风格</string>
    <string name="sort_gongLue_title_object">对象</string>

    <string name="sort_gift_title_shenQi">选礼神器</string>


    <!--我的 控件-->
    <string name="my_btn_text_shopcar">购物车</string>
    <string name="my_btn_text_shoplist">订单</string>
    <string name="my_btn_text_coupon">礼券</string>
    <string name="my_btn_text_service">客服</string>
    <string name="my_tv_text_gift">喜欢的礼物摆在这里哦</string>
    <string name="my_tv_text_gonglue">喜欢的攻略放在这里哦</string>


    <!--网络-->
    <string name="load_fail_api">服务器访问失败</string>
    <string name="load_fail_timeout">服务器请求超时</string>

    <string name="exit_click_again">再按一次退出【礼物说】</string>

    <!--通用-->
    <string name="text_giftsay">礼物说</string>
    <string name="text_hot">热门</string>


</resources>
