<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gift.mygift.ui.home.HomeActivity">

    <include
        layout="@layout/module_home_toolbar"/>

    <FrameLayout
        android:id="@+id/home_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#dfdfdf"/>

    <RadioGroup
        android:id="@+id/home_radioGroup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingTop="@dimen/padding_screen_half"
        android:paddingBottom="@dimen/padding_screen_half"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_guide"
            style="@style/Home_radioButton"
            android:drawableTop="@drawable/slct_home_rb_guide"
            android:text="@string/home_rb_text_guide"/>

        <RadioButton
            android:id="@+id/rb_hot"
            style="@style/Home_radioButton"
            android:drawableTop="@drawable/slct_home_rb_hot"
            android:text="@string/home_rb_text_hot"/>

        <RadioButton
            android:id="@+id/rb_sort"
            style="@style/Home_radioButton"
            android:drawableTop="@drawable/slct_home_rb_sort"
            android:text="@string/home_rb_text_sort"/>

        <RadioButton
            android:id="@+id/rb_my"
            style="@style/Home_radioButton"
            android:drawableTop="@drawable/slct_home_rb_my"
            android:text="@string/home_rb_text_sort"/>
    </RadioGroup>

</LinearLayout>
